# triangle_detector_cpp.Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  demo_cpp.cpp  install.txt  main.cpp  shape_detector.cpp  shape_detector.h  shape_detector_common.h  shape_detector_cpp.cpp  shape_detector_cpp.h  shape_detector_cuda_opencv.cu  shape_detector_cuda_opencv.cuh  todo.txt
benchmarks/: CMakeLists.txt  benchmark.cu  grayscale_comparison_test.cpp  main.cu  utils.cuh
benchmarks/profiler/: -2.cu  main.cpp
cmake/: AddCustomTarget.cmake  AddGTestExec.cmake  AddLogMessage.cmake  AddPostBuildClearOutput.cmake  Logs_CMakeLists.cmake  ProjectConfig.cmake
demo/: CMakeLists.txt  demo_cpp.cpp  triangle_detector_camera_demo_cpp.cpp
development_notes/: todo.txt
development_notes/cmake_reference/: AddGTestExec.cmake  Logs_ProjectConfig.cmake
development_notes/profiler/: cu.txt  profile_stats.h
include/: debug.cuh  debug.h  profiler_logic.cuh  shape_detector_common.h  shape_detector_logic.h  shared_utils.cuh  shared_utils.h  utils_common.cuh  utils_cpp.h  utils_cuda_opencv.cuh  utils_pure_cuda.cuh
profiling/: CMakeLists.txt  profiling_logic.h  profiling_opencv_cuda.cu  run_all_profilings.cpp
src/: CMakeLists.txt  debug.cpp  debug.cu  utils_common.cpp  utils_common.cu  utils_cpp.cpp  utils_pure_cuda.cu
src/cpp/: CMakeLists.txt  shape_detector_cpp.cpp  utils_cpp.cpp
src/cuda_opencv/: CMakeLists.txt  shape_detector_cuda_opencv.cu  utils_cuda_opencv.cu
src/pure_cuda/: CMakeLists.txt  shape_detector_pure_cuda.cu  utils_pure_cuda.cu
src/shared/: shape_detector_logic.cpp  shared_utils.cpp  shared_utils.cu  utils.cpp  utils.cu
temp/cmake_reference/: AddLogMessage.cmake
temp/cuda_border_detector/: borders_cuda.cu  borders_cuda.cuh
temp/profiler/: profile_function.h  profile_sampler.h
test/: run_all_tests.cpp  test_logic.h  triangle_cpp_test.cpp  triangle_cuda_opencv_test.cpp
tests/: CMakeLists.txt  run_all_tests.cpp  test_logic.cpp  test_logic.h  triangle_cpp_test.cpp  triangle_cuda_opencv_test.cpp  triangle_cuda_opencv_test.cu  utils_cpp_test.cpp  utils_cuda_opencv_test.cu
tests/cpp/: triangle_cpp_test.cpp  utils_cpp_test.cpp
tests/cuda_opencv/: triangle_cuda_opencv_test.cu  utils_cuda_opencv_test.cu
tests/framework/: test_logic.cpp  test_logic.h
tests/pure_cuda/: triangle_pure_cuda_test.cu  utils_pure_cuda_test.cu
utils/: utils_cpp.h  utils_cuda_opencv.cuh
